--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "webpack.config.js"
   ],
   "keywords": [
-      "react", "btc-e calc"
+    "react",
+    "btc-e calc"
   ],
   "eslintConfig": {
     "root": true,
@@ -31,7 +32,7 @@
   },
   "author": "my8bit ",
   "license": "MIT",
-  "dependencies":{
+  "dependencies": {
     "lodash": "^4.16.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -45,26 +46,27 @@
     "react-addons-pure-render-mixin": "^15.3.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.0",
+    "babel-core": "^6.17.0",
     "babel-eslint": "^6.0.2",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.25.0",
     "eslint": "^2.11.0",
     "eslint-config-xo-react": "^0.7.0",
     "eslint-config-xo-space": "^0.12.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-babel": "^3.1.0",
     "eslint-plugin-react": "^5.0.1",
-    "autoprefixer": "^6.5.0",
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
-    "style-loader": "^0.13.1",
-    "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "postcss-loader": "^0.13.0",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
   }
